--- a/src/main/resources/templates/test-join.html
+++ b/src/main/resources/templates/test-join.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -29,7 +29,7 @@
                             width="35"
                             height="35"
                             class="d-inline-block align-text-middle me-1"
-                    />@username</a
+                    /><span th:text="'@' + ${username}"/></a
                 >
                 <button
                         class="navbar-toggler"
@@ -47,12 +47,10 @@
                         <a
                                 class="nav-link text-center fs-5 link-light active"
                                 aria-current="page"
-                                href="user-home.html"
+                                href="#"
                         >Join Test</a
                         >
-                        <a
-                                class="nav-link text-center fs-5 link-light"
-                                href="create-test.html"
+                        <a class="nav-link text-center fs-5 link-light" href="#"
                         >Create Test</a
                         >
                         <a class="nav-link text-center fs-5 link-light" href="#"
@@ -65,7 +63,7 @@
                     <div class="navbar-nav ms-auto">
                         <a
                                 class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
-                                href=""
+                                href="/account/login"
                         >Log out</a
                         >
                     </div>
