--- a/src/main/resources/templates/user-home.html
+++ b/src/main/resources/templates/user-home.html
@@ -16,63 +16,7 @@
 </head>
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-5">
-    <header class="flex-shrink-0 border-bottom border-black shadow">
-        <nav class="navbar navbar-expand-lg bg-secondary">
-            <div class="container-fluid gap-1">
-                <a
-                        class="navbar-brand bg-light rounded shadow px-1 fs-5 border border-black border-2"
-                        href="#"
-                >
-                    <img
-                            src="/images/astronaut.png"
-                            alt="default-avatar"
-                            width="35"
-                            height="35"
-                            class="d-inline-block align-text-middle me-1"
-                    />@username</a
-                >
-                <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup"
-                        aria-controls="navbarNavAltMarkup"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
-                        <a
-                                class="nav-link text-center fs-5 link-light active"
-                                aria-current="page"
-                                href="user-home.html"
-                        >Join Test</a
-                        >
-                        <a
-                                class="nav-link text-center fs-5 link-light"
-                                href="create-test.html"
-                        >Create Test</a
-                        >
-                        <a class="nav-link text-center fs-5 link-light" href="#"
-                        >My Results</a
-                        >
-                        <a class="nav-link text-center fs-5 link-light" href="#"
-                        >My Tests</a
-                        >
-                    </div>
-                    <div class="navbar-nav ms-auto">
-                        <a
-                                class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
-                                href=""
-                        >Log out</a
-                        >
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div th:replace="fragments/headers :: header"></div>
 
     <main
             class="container d-flex justify-content-center align-items-center flex-grow-1"
@@ -159,30 +103,7 @@
         </div>
     </main>
 
-    <footer class="shadow border-top border-black bg-secondary">
-        <div class="container-fluid">
-            <footer class="container bg-secondary">
-                <ul class="nav justify-content-center pb-3 mb-3">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">FAQs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">About</a>
-                    </li>
-                </ul>
-                <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
-            </footer>
-        </div>
-    </footer>
+    <div th:replace="fragments/footers :: footer"></div>
 </div>
 
 <script
