--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -181,20 +181,20 @@
     </main>
 </div>
 
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        const password = document.getElementById('password');
-        const confirmPassword = document.getElementById('confirmPassword');
+<!--<script>-->
+<!--    document.addEventListener('DOMContentLoaded', () => {-->
+<!--        const password = document.getElementById('password');-->
+<!--        const confirmPassword = document.getElementById('confirmPassword');-->
 
-        confirmPassword.addEventListener('input', () => {
-            if (password.value !== confirmPassword.value) {
-                confirmPassword.setCustomValidity('Passwords do not match');
-            } else {
-                confirmPassword.setCustomValidity('');
-            }
-        });
-    });
-</script>
+<!--        confirmPassword.addEventListener('input', () => {-->
+<!--            if (password.value !== confirmPassword.value) {-->
+<!--                confirmPassword.setCustomValidity('Passwords do not match');-->
+<!--            } else {-->
+<!--                confirmPassword.setCustomValidity('');-->
+<!--            }-->
+<!--        });-->
+<!--    });-->
+<!--</script>-->
 <script
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
