--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -79,24 +79,68 @@
         </nav>
     </header>
 
-    <main class="d-flex justify-content-center align-items-center flex-grow-1">
-        <div class="d-flex bg-secondary rounded shadow border border-black border-2 text-white p-5 gap-3 fs-4 flex-wrap justify-content-center align-items-center">
-            <div>
+    <main class="container d-flex flex-column flex-fill align-item-center justify-content-center gap-3 flex-grow-1">
+        <h1 class="text-center">My Profile</h1>
+        <div class="row bg-secondary shadow rounded border border-2 border-black p-3">
+            <div class="col-sm-12 col-md-5 mb-3 mb-sm-3 mb-md-0 d-flex flex-column align-items-center gap-2">
                 <img
                         src="/images/astronaut.png"
                         alt="profile-picture"
-                        width="400px"
-                        height="400px"
+                        width="300px"
+                        height="300px"
                         class="shadow rounded-circle border border-2 border-black"
                 />
+                <button class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50">
+                    change
+                </button>
             </div>
-            <div>
-                <p>Username: @username</p>
-                <p>First name: Random</p>
-                <p>Last name: Random</p>
-                <p>Email: example@some.com</p>
-                <p>Phone: XXX-XXX-XXXX</p>
-                <p>Role: RANDOM</p>
+            <div class="col-sm-12 col-md-7 d-flex flex-column align-items-center">
+                <input
+                        class="form-control border border-2 border-black shadow rounded fs-5 mb-2"
+                        disabled
+                        id="username"
+                        readonly
+                        type="text"
+                        value="Username: random">
+                <input
+                        class="form-control border border-2 border-black shadow rounded fs-5 mb-2" disabled
+                        id="firstName"
+                        readonly
+                        type="text"
+                        value="First name: Random">
+                <input
+                        class="form-control border border-2 border-black shadow rounded fs-5 mb-2" disabled
+                        id="lastName"
+                        readonly
+                        type="text"
+                        value="Last name: Random">
+                <input
+                        class="form-control border border-2 border-black shadow rounded fs-5 mb-2" disabled
+                        id="email"
+                        readonly
+                        type="email"
+                        value="Email: test@example.com">
+                <input
+                        class="form-control border border-2 border-black shadow rounded fs-5 mb-2" disabled
+                        id="phone"
+                        readonly
+                        type="text"
+                        value="Phone: XXX-XXX-XXXX">
+                <input
+                        class="form-control border border-2 border-black shadow rounded fs-5 mb-2" disabled id="role"
+                        readonly
+                        type="text"
+                        value="Role: STANDARD">
+                <button class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50">
+                    Edit Account
+                </button>
+            </div>
+        </div>
+        <div class="row justify-content-center text-center">
+            <div class="col-sm-8 col-md-4">
+                <button class="btn btn-danger rounded shadow text-center text-black border border-black border-2 fs-5 px-3">
+                    Delete Account
+                </button>
             </div>
         </div>
     </main>
