--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -1,83 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="head">
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>TestingEz</title>
-    <link
-            rel="icon"
-            type="image/x-icon"
-            href="/images/school.png"
-    />
-    <link rel="stylesheet" href="/css/reset.css"/>
-    <link rel="stylesheet" href="/css/typography.css"/>
-    <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-    />
-</head>
+<div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 
 <div class="d-flex flex-column vh-100 gap-5">
-    <header class="flex-shrink-0 border-bottom border-black shadow">
-        <nav class="navbar navbar-expand-lg bg-secondary">
-            <div class="container-fluid gap-1">
-                <a
-                        class="navbar-brand bg-light rounded shadow px-1 fs-5 border border-black border-2"
-                        href="#"
-                >
-                    <img
-                            src="/images/astronaut.png"
-                            alt="default-avatar"
-                            width="35"
-                            height="35"
-                            class="d-inline-block align-text-middle me-1"
-                    /><span th:text="${username}"></span></a
-                >
-                <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-bs-toggle="collapse"
-                        data-bs-target="#navbarNavAltMarkup"
-                        aria-controls="navbarNavAltMarkup"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
-                        <a
-                                class="nav-link text-center fs-5 link-light active"
-                                aria-current="page"
-                                href="/test/join"
-                        >Join Test</a
-                        >
-                        <a
-                                class="nav-link text-center fs-5 link-light"
-                                href="/test/create"
-                        >Create Test</a
-                        >
-                        <a class="nav-link text-center fs-5 link-light" href="#"
-                        >My Results</a
-                        >
-                        <a class="nav-link text-center fs-5 link-light" href="#"
-                        >My Tests</a
-                        >
-                    </div>
-                    <div class="navbar-nav ms-auto">
-                        <a
-                                class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
-                                href=""
-                        >Log out</a
-                        >
-                    </div>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div th:replace="~{fragments/headers :: header}"></div>
 
     <main class="container d-flex flex-column flex-fill align-item-center justify-content-center gap-3 flex-grow-1">
         <h1 class="text-center">My Profile</h1>
@@ -131,7 +58,17 @@
                         readonly
                         type="text"
                         value="Role: STANDARD">
-                <button class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50">
+                <div class="justify-content-center gap-2 w-100" id="edit-buttons-div" style="display: none">
+                    <button class="btn btn-success rounded shadow text-center text-black border border-black border-2 w-50">
+                        save
+                    </button>
+                    <a th:href="@{/user/profile}"
+                       class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50">
+                        cancel
+                    </a>
+                </div>
+                <button class="btn bg-light rounded shadow text-center text-black border border-black border-2 w-50"
+                        id="edit-button">
                     Edit Account
                 </button>
             </div>
@@ -145,40 +82,9 @@
         </div>
     </main>
 
-    <footer class="shadow rounded border-top border-black bg-secondary">
-        <div class="container-fluid">
-            <footer class="container bg-secondary">
-                <ul class="nav justify-content-center pb-3 mb-3">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">FAQs</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link px-2 text-white fs-5">About</a>
-                    </li>
-                </ul>
-                <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
-            </footer>
-        </div>
-    </footer>
+    <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
-<script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"
-></script>
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"
-></script>
+<script src="/js/hide-reveal-edit-buttons.js"></script>
+<div th:replace="~{fragments/scripts :: scripts}"></div>
 </body>
 </html>
