--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -11,7 +11,7 @@
               novalidate
               th:action="@{/account/login}"
               th:object="${userSignInData}">
-            <div th:if="${invalidCredentials}" class="text-danger fs-6 text-center">invalid credentials</div>
+            <div th:if="${error}" class="text-danger fs-6 text-center">invalid credentials</div>
             <label for="username" class="form-label">Username:</label>
             <div class="input-group">
                 <span class="input-group-text border-black" id="inputGroupPrepend">@</span>
