--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -34,27 +34,27 @@
                     <a
                             class="nav-link text-center fs-5 link-light active"
                             aria-current="page"
-                            href="/test/join"
-                    >Join Test</a
-                    >
+                            th:href="@{/user/home}"
+                    >Home</a>
+                    <a
+                            class="nav-link text-center fs-5 link-light active"
+                            aria-current="page"
+                            th:href="@{/test/join}"
+                    >Join Test</a>
                     <a
                             class="nav-link text-center fs-5 link-light"
-                            href="/test/create"
-                    >Create Test</a
-                    >
+                            th:href="@{/test/create}"
+                    >Create Test</a>
                     <a class="nav-link text-center fs-5 link-light" href="#"
-                    >My Results</a
-                    >
+                    >My Results</a>
                     <a class="nav-link text-center fs-5 link-light" href="#"
-                    >My Tests</a
-                    >
+                    >My Tests</a>
                 </div>
                 <div class="navbar-nav ms-auto">
                     <a
                             class="nav-link bg-light rounded shadow px-3 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
                             href=""
-                    >Log out</a
-                    >
+                    >Log out</a>
                 </div>
             </div>
         </div>
