--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec='http://www.thymeleaf.org/extras/spring-security'>
 <div th:replace="~{fragments/heads :: head}"></div>
 <body class="font">
 
@@ -16,7 +18,7 @@
                         width="35"
                         height="35"
                         class="d-inline-block align-text-middle me-1"
-                /><span th:text="${username}"/></a
+                /><span sec:authentication="name"></span></a
             >
             <button
                     class="navbar-toggler"
@@ -49,6 +51,14 @@
                     >My Results</a>
                     <a class="nav-link text-center fs-5 link-light" href="#"
                     >My Tests</a>
+                    <a class="nav-link text-center fs-5 link-light"
+                       href="#"
+                       sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
+                    >All Tests</a>
+                    <a class="nav-link text-center fs-5 link-light"
+                       href="#"
+                       sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
+                    >All Users</a>
                 </div>
                 <div class="navbar-nav ms-auto">
                     <form
