--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -34,28 +34,28 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
                     <a
-                            class="nav-link text-center fs-5 link-light active"
+                            class="nav-link text-center text-dark fs-5 link-light active"
                             aria-current="page"
                             th:href="@{/user/home}"
                     >Home</a>
                     <a
-                            class="nav-link text-center fs-5 link-light active"
+                            class="nav-link text-center text-dark fs-5 link-light active"
                             aria-current="page"
                             th:href="@{/test/join}"
                     >Join Test</a>
                     <a
-                            class="nav-link text-center fs-5 link-light"
+                            class="nav-link text-center text-dark fs-5 link-light"
                             th:href="@{/test/create}"
                     >Create Test</a>
-                    <a class="nav-link text-center fs-5 link-light" href="#"
+                    <a class="nav-link text-center text-dark fs-5 link-light" href="#"
                     >My Results</a>
-                    <a class="nav-link text-center fs-5 link-light" href="#"
+                    <a class="nav-link text-center text-dark fs-5 link-light" href="#"
                     >My Tests</a>
-                    <a class="nav-link text-center text-success-emphasis fs-5 link-light"
+                    <a class="nav-link text-center text-warning fs-5 link-light"
                        href="#"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
                     >All Tests</a>
-                    <a class="nav-link text-center text-success-emphasis fs-5 link-light"
+                    <a class="nav-link text-center text-warning fs-5 link-light"
                        href="#"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
                     >All Users</a>
